# meridian-atlas

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.mcp.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml
mcp/: scan.ts  scip.ts  server.ts
scripts/: check-grammars.mjs  check-mcp.mjs  generate-tauri-icons.mjs
src/: main.tsx  styles.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/demo/: specimen.ts
src/graph/: build.test.ts  build.ts  exportImport.test.ts  exportImport.ts  interpret.test.ts  interpret.ts  layout.test.ts  layout.ts  scip.ts  snapshot.test.ts  snapshot.ts  thresholds.test.ts  thresholds.ts
src/i18n/: context.tsx  translations.ts
src/native/: fs.test.ts  fs.ts
src/parser/: extract.ts  languages.ts  loader.ts  scan.test.ts  scan.ts
src/ui/: App.tsx  ChartCanvas.tsx  ChartHeader.tsx  ChartLegend.tsx  ChartToolbar.tsx  ExportToolbar.tsx  HelpOverlay.tsx  Landing.tsx  LanguageSelector.tsx  ReadyHint.tsx  RecentsList.tsx  SearchOverlay.tsx  SidePanel.tsx  ToastContainer.tsx  Tour.tsx  chartExport.test.ts  chartExport.ts  filters.ts
src/ui/hooks/: useHotkeys.ts  useLastScanMetric.ts  useNativeMenu.ts  useRecents.test.ts  useRecents.ts  useSurvey.ts  useTheme.ts  useToasts.hook.test.ts  useToasts.test.ts  useToasts.ts  useWatcher.ts
